Fix scaling issues

--- a/CSPBot2.0/ResourceFile/cspbot20.qrc
+++ b/CSPBot2.0/ResourceFile/cspbot20.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource prefix="icon">
+  <qresource prefix="/icon">
     <file>../Images/Main.svg</file>
     <file>../Images/用户管理.svg</file>
     <file>../Images/主页.svg</file>
@@ -7,7 +7,7 @@
     <file>../Images/文本.svg</file>
     <file>../Images/正则式.svg</file>
   </qresource>
-  <qresource prefix="a">
+  <qresource prefix="/a">
     <file>../Images/a/1.png</file>
     <file>../Images/a/2.png</file>
     <file>../Images/a/3.png</file>
@@ -15,5 +15,8 @@
     <file>../Images/a/addpage.png</file>
     <file>../Images/a/subpage.png</file>
     <file>../Images/a/tiao.png</file>
+  </qresource>
+  <qresource prefix="/qt">
+    <file>etc/qt.conf</file>
   </qresource>
 </RCC>
